syntax = "proto3";

package api.v1;

service ContactService {
  rpc SubmitContact(ContactRequest) returns (ContactResponse);
  rpc SubscribeNewsletter(NewsletterRequest) returns (NewsletterResponse);
}

message ContactRequest {
  string name = 1;
  string phone = 2;
  string email = 3;
  string message = 4;
}

message ContactResponse {
  bool success = 1;
  string message = 2;
  string submission_id = 3;
}

message NewsletterRequest {
  string email = 1;
}

message NewsletterResponse {
  bool success = 1;
  string message = 2;
}
